--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+    <div id="container">
+        <div class="game-title">
+            <h1>Arcade Game</h1>
+        </div>
+        
+        <div id="menu">
+            <h2>Press enter to select your character</h2>
+        </div>
+
+        <div id="score" class="score-hide">
+            <span id="lifes">lifes</span>
+            <span id="points">Points</span>
+        </div>        
+    </div>
+
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
