--- a/index.html
+++ b/index.html
@@ -22,8 +22,18 @@
         </div>        
     </div>
 
+
+    <div id="myModal" class="modal">    
+        <div class="modal-content"> 
+            <span class="close">&times;</span>           
+            <p>Body</p>
+            <button>Game over</button>
+        </div>
+    </div>
+
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
+    <script src="js/modal.js"></script>
 </body>
 </html>
