--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>Effective JavaScript: Frogger</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
     <div id="container">
         <div class="game-title">
             <h1>Arcade Game</h1>
         </div>
-        
+
         <div id="menu">
             <h2>Press enter to select your character</h2>
         </div>
@@ -19,21 +21,27 @@
         <div id="score" class="score-hide">
             <span id="lifes">lifes</span>
             <span id="points">Points</span>
-        </div>        
+        </div>
     </div>
 
 
-    <div id="myModal" class="modal">    
-        <div class="modal-content"> 
-            <span class="close">&times;</span>           
-            <p>Body</p>
-            <button>Game over</button>
+    <div id="myModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <span class="button-close">X</span>
+            </div>
+            <div class="modal-body">
+                <p>Body</p>
+                <button id="btn-game-over">Game over</button>
+            </div>
         </div>
+
     </div>
 
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
-    <script src="js/modal.js"></script>
+    <!-- <script src="js/modal.js"></script> -->
 </body>
+
 </html>
