--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
                 <span class="button-close">X</span>
             </div>
             <div class="modal-body">
-                <p>Body</p>
+                <p id="game-over-text">Game over</p>
+                <p id="modal-text"></p>
                 <button id="btn-game-over">Game over</button>
             </div>
         </div>
-
     </div>
 
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
-    <!-- <script src="js/modal.js"></script> -->
+
 </body>
 
 </html>
